tests/ui/privacy/union-field-privacy-1.stderr
error[E0451]: field `c` of union `U` is private
  --> $DIR/union-field-privacy-1.rs:12:20
   |
LL |     let u = m::U { c: 0 };
   |                    ^ private field

error[E0451]: field `c` of union `U` is private
  --> $DIR/union-field-privacy-1.rs:16:16
   |
LL |     let m::U { c } = u;
   |                ^ private field

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0451`.
